@@ -1,10 +1,11 @@
 10.0.00.alpha.1 - 23rd October 2022
 - Welcome to Dragonflight!
+- For 'Sell junk automatically' ('Automation'), white items entered in the exclusions editbox will be sold automatically.  Junk items entered in the editbox will not be sold automatically (as before).
 - Added a new option 'Manage vehicle' ('Frames') which will allow you to move and scale the vehicle seat indicator frame.
 - For 'Mute game sounds' ('System'), you can now mute broom mount sounds.
 - Having ElvUI installed will no longer uncheck conficting option checkboxes.  Conflicting option checkboxes will still be locked but they won't be unchecked.  So if a conflicting option checkbox was checked before installing ElvUI or before enabling a conflicting ElvUI module, it will still be checked after disabling ElvUI or disabling the conflicting ElvUI module.
 - The 'More font sizes' option ('Chat') has been replaced by 'Set chat font size'.
-- Options that are now available with Edit Mode have been removed.  These include 'Manage frames', 'Manage buffs', 'Manage power bar', 'Manage focus', 'Hide gryphons', 'Hide hide bags and micro', 'Set field of view' and 'Save profession filters'.
+- Options that are now available in the game have been removed.  These include 'Manage frames', 'Manage buffs', 'Manage power bar', 'Manage focus', 'Hide gryphons', 'Hide hide bags and micro', 'Set field of view' and 'Save profession filters'.
 - Removed Shadowlands specific code.
 
 9.2.45 - 19th October 2022
